[package]
name = "cloudflare-ddns-service"
version = "0.5.3"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2018"
description = "A daemon to use Cloudflare as a DDNS provider"
repository = "https://git.jcg.re/jcgruenhage/cloudflare-ddns-service"
homepage = "https://git.jcg.re/jcgruenhage/cloudflare-ddns-service"
keywords = ["cloudflare", "ddns"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
documentation = "https://git.jcg.re/jcgruenhage/cloudflare-ddns-service"
readme = "README.md"

[dependencies]
anyhow = "1"
cloudflare = "0.10"
env_logger = "0.11"
log = "0.4"
public-ip = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }

[patch.crates-io]
cloudflare = { git = "https://github.com/jcgruenhage/cloudflare-rs.git", branch = "make-owner-fields-optional" }
public-ip = { git = "https://github.com/jcgruenhage/rust-public-ip.git", branch = "main" }
