[package]
name = "dyndnsd"
version = "0.6.2"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2021"
description = "A daemon for dynamically updating DNS via multiple DNS providers"
repository = "https://git.jcg.re/jcgruenhage/dyndnsd"
homepage = "https://git.jcg.re/jcgruenhage/dyndnsd"
keywords = ["rfc2136", "cloudflare", "ddns"]
categories = ["command-line-utilities"]
license-file = "LICENSE.md"
documentation = "https://git.jcg.re/jcgruenhage/dyndnsd"
readme = "README.md"

[dependencies]
anyhow = "1"
dns-update = "0.1"
env_logger = "0.11"
log = "0.4"
public-ip = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
toml = "0.8.20"

[patch.crates-io]
dns-update = { git = "https://github.com/jcgruenhage/dns-update.git", branch = "fork"}
public-ip = { git = "https://github.com/jcgruenhage/rust-public-ip.git", branch = "main" }
