[package]
name = "dyndnsd"
version = "0.7.0"
authors = ["Jan Christian Grünhage <jan.christian@gruenhage.xyz>"]
edition = "2024"
description = "A daemon for dynamically updating DNS via multiple DNS providers"
repository = "https://git.jcg.re/jcgruenhage/dyndnsd"
homepage = "https://git.jcg.re/jcgruenhage/dyndnsd"
keywords = ["rfc2136", "cloudflare", "ddns"]
categories = ["command-line-utilities"]
license-file = "LICENSE.md"
documentation = "https://git.jcg.re/jcgruenhage/dyndnsd"
readme = "README.md"

[dependencies]
anyhow = "1"
env_logger = "0.11"
hickory-client = "0.25"
hickory-proto = { version = "0.25", features = ["dnssec-aws-lc-rs", "serde"] }
log = "0.4"
public-ip = "0.2"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "3", features = ["base64"] }
thiserror = "2"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
toml = "0.8"

[patch.crates-io]
public-ip = { git = "https://github.com/jcgruenhage/rust-public-ip.git", branch = "main" }
